# AI-Agents-Directory

./: SendMail.py  Sumof2Nos.py
DB/: Restaurants.db
Sample Web App/ai-agents-app/: README.md  index.html
Sample Web App/ai-agents-app/css/: styles.css
Sample Web App/ai-agents-app/js/: app.js
Sample Web App/flask-clock-app/: .gitignore  README.md  pyproject.toml  requirements.txt  sample_data.csv
Sample Web App/flask-clock-app/docs/: csv_analyzer.html  index.html
Sample Web App/flask-clock-app/docs/css/: styles.css
Sample Web App/flask-clock-app/docs/js/: clock.js  csv_analyzer.js
Sample Web App/flask-clock-app/src/: app.py
Sample Web App/flask-clock-app/src/static/css/: styles.css
Sample Web App/flask-clock-app/src/static/js/: clock.js
Sample Web App/flask-clock-app/src/templates/: index.html
Sample Web App/flask-clock-app/tests/: test_app.py
